--- a/24_react-remotion/src/Strokes.module.css
+++ b/24_react-remotion/src/Strokes.module.css
@@ -1,5 +1,6 @@
 .strokes-container {
 	position: absolute;
+	bottom: -30%;
 	width: 100%;
 	height: 100%;
 	z-index: -1;
@@ -11,7 +12,8 @@
 	stroke-linecap: round;
 	stroke: orange;
 	transform-origin: center center;
-	animation: background-animation 20s linear infinite;
+	/* Animation as normal animation when NOT using remotion  */
+	/* animation: background-animation 20s linear infinite; */
 }
 
 .stroke-path--first {
@@ -19,19 +21,20 @@
 }
 
 .stroke-path--second {
-	transform: rotate(120deg);
+	transform: rotate(45deg);
 }
 
 .stroke-path--third {
-	transform: rotate(240deg);
+	transform: rotate(90deg);
 }
 
-@keyframes background-animation {
+/* Animation as normal animation when NOT using remotion  */
+/* @keyframes background-animation {
 	from {
 		stroke-dashoffset: 0;
 	}
 
 	to {
-		stroke-dashoffset: var(--stroke-length);
+		stroke-dashoffset: var(--stroke-length); // value of getTotalLength() of stroke-path svg element
 	}
-}
+} */
