feat: add fonts to capstone project

--- a/25_project-capstone/src/components/category-item/category-item.styles.scss
+++ b/25_project-capstone/src/components/category-item/category-item.styles.scss
@@ -54,15 +54,16 @@
 		position: absolute;
 
 		h2 {
-			font-weight: bold;
-			margin: 0 6px 0;
 			font-size: 22px;
+			font-weight: bold;
 			color: #4a4a4a;
+			margin: 0 6px;
 		}
 
 		p {
-			font-weight: lighter;
 			font-size: 16px;
+			font-weight: light;
+			color: #4a4a4a;
 		}
 	}
 }
