--- a/25_project-capstone/src/index.scss
+++ b/25_project-capstone/src/index.scss
@@ -1,5 +1,7 @@
+@use './fonts/fonts';
+
 :root {
-	font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+	font-family: 'Open Sans', Inter, Avenir, Helvetica, Arial, sans-serif;
 	font-size: 16px;
 	line-height: 24px;
 	font-weight: 400;
