--- a/25_project-capstone/src/routes/navigation/navigation.styles.scss
+++ b/25_project-capstone/src/routes/navigation/navigation.styles.scss
@@ -11,6 +11,7 @@
 		justify-content: flex-end;
 
 		.navigation__link {
+			text-transform: uppercase;
 			padding: 10px 15px;
 			cursor: pointer;
 		}
